--- a/dev/scss/layout/_footer.scss
+++ b/dev/scss/layout/_footer.scss
@@ -7,7 +7,7 @@
 ============= */
 footer {
     background-color: black;
-    color: black;
+    // color: black;
     padding: 0px 0px 50px 0px;
     text-align: center;
 
@@ -27,18 +27,11 @@ footer {
 
         @include md {
             display: grid;
-            grid-template-areas: "band band"
-                "header icons";
+            grid-template-areas: "header icons";
             grid-template-columns: 60% auto;
-            grid-template-rows: repeat(2/1fr);
+            grid-template-rows: repeat(1/1fr);
         }
 
-        >div {
-            background-color: black;
-            grid-area: band;
-            height: 10vh;
-            width: 100%;
-        }
 
         h3 {
             padding-top: 50px;
@@ -53,7 +46,7 @@ footer {
                 font-size: 1rem;
                 margin: 10px 10px 20px 10px;
                 text-align: left;
-                padding: 30px 0 0 30px;
+                padding: 40px 0 0 30px;
             }
 
             @include lg {
@@ -63,6 +56,7 @@ footer {
         }
 
         h4 {
+            padding-top: 15px;
             color: white;
             font-family: Montserrat;
             font-size: 1.2rem;
@@ -79,6 +73,7 @@ footer {
             font-size: 1rem;
             grid-area: icons;
             justify-content: center;
+            align-items: center;
 
             @include md {
                 justify-content: flex-end;
